--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <a href="https://www.tiktok.com/@hamba_allah_04m?_t=8oTe3tf4gXH&_r=1"><i class='bx bxl-tiktok'></i></a>
         <a href="https://www.facebook.com/hany.romero.100?mibextid=ZbWKwL"><i class='bx bxl-facebook'></i></a>
       </div>
-      <a href="img/CV.jpeg" download="Honey CV" class="btn">Download CV</a>
+      <a href="img/hans1-removebg-preview (1).png" class="btn">Download CV</a>
     </div>
 
 
@@ -127,7 +127,16 @@
           <div class="portofolio-layer">
             <h4>my blogger</h4>
             <p>di project ini banyak sekali tugasnya pak fahri tentang 2 NF, diagram activity, RIVIEW QUERY, dll.</p>
-            <a href="https://honeyromero23.blogspot.com/"><i class='bx bx-link-external'></i></a>
+            <a href="#"><i class='bx bx-link-external'></i></a>
+          </div>
+        </div>
+
+        <div class="portofolio-box">
+          <img src="img/login page.png" alt="">
+          <div class="portofolio-layer">
+            <h4>Login page</h4>
+            <p>Ini adalah projek login page saya</p>
+            <a href="login.html"><i class='bx bx-link-external'></i></a>
           </div>
         </div>
     </section>
